@@ -6,5 +6,5 @@
 	<licence>AGPL</licence>
 	<author>Alessandro Cosentino, Bernhard Posselt, Jan-Christoph Borchardt. Powered by SimplePie (Ryan Parman, Geoffrey Sneddon, Ryan McCue and contributors).</author>
 	<version>1.808</version>
-	<require>5.0.6</require>
+	<require>6</require>
 </info>
