@@ -1,5 +1,7 @@
-owncloud-news (1.809)
+owncloud-news (2.001)
 * Delete folders, feeds and articles if a user is deleted
+* Also remember collapsed folders on postgres
+* Require ownCloud 6
 
 owncloud-news (1.808)
 * Also focus article area when clicking on all unread link
